--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-# Arquivos de sistema
-.DS_Store
-Thumbs.db
-.next
+# Diretórios
+.next/
+node_modules/
 
-# Dependências
-/node_modules
-
-# Logs e arquivos temporários
+# Arquivos de log
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.pid
-*.seed
-*.pid.lock
-npm-debug.log
-yarn.lock
